--- a/_publications/AMAI2022.md
+++ b/_publications/AMAI2022.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publications/AMAI2022
 venue: "Applications of Medical AI (AMAI) at MICCAI 2022"
 date: 2022-09-30
-citation: '<b>Khondker Fariha Hossain</b>, Sharif Amit Kamran </b>, Alireza Tavakkoli, Xingjun Ma'
+citation: '<b>Khondker Fariha Hossain</b>, Sharif Amit Kamran, Alireza Tavakkoli, Xingjun Ma'
 ---
 [[Springer]](https://link.springer.com/chapter/10.1007/978-3-031-17721-7_8)[[Arxiv]](https://arxiv.org/abs/2110.09983)
 
